// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`calling addProperty from the operation callback should result in the property being added to propertybag 1`] = `
Object {
  "customLogs": Array [],
  "debugLogs": Array [],
  "errorLogs": Array [],
  "infoLogs": Array [
    "{\\"operationName\\":\\"TestAddPropertyOperation\\",\\"elapsedTime\\":10,\\"didOperationSucceed\\":true,\\"didOperationFailUnexpectedly\\":false,\\"encounteredException\\":false,\\"propertyBag\\":{\\"TestKey\\":\\"TestValue\\"}}",
  ],
  "sillyLogs": Array [],
  "verboseLogs": Array [],
  "warningLogs": Array [],
}
`;

exports[`operation should return the fallback result if an exception was encountered and the exception should be logged out 1`] = `
Object {
  "customLogs": Array [],
  "debugLogs": Array [],
  "errorLogs": Array [],
  "infoLogs": Array [
    "{\\"operationName\\":\\"TestAddPropertyOperation\\",\\"elapsedTime\\":10,\\"didOperationSucceed\\":false,\\"didOperationFailUnexpectedly\\":false,\\"encounteredException\\":true,\\"exceptionInfo\\":{},\\"propertyBag\\":{}}",
  ],
  "sillyLogs": Array [],
  "verboseLogs": Array [],
  "warningLogs": Array [],
}
`;
